--- a/index.html
+++ b/index.html
@@ -72,5 +72,20 @@
         </li>
       </ul>
     </section>
+
+    <section>
+      <h2>Examples of works</h2>
+      <ul>
+        <li>
+          <img src="./images/placeholder.png" alt="" width="750" />
+          <h3>Sed ut perspiciatis unde omnis</h3>
+          <p>
+            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+            consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+            quisquam est, qui dolorem.
+          </p>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
