--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
             quisquam est, qui dolorem.
           </p>
         </li>
+        <li>
+          <img src="./images/placeholder.png" alt="" width="750" />
+          <h3>Sed ut perspiciatis unde omnis</h3>
+          <p>
+            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+            consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+            quisquam est, qui dolorem.
+          </p>
+        </li>
       </ul>
     </section>
   </body>
