--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Semantic</title>
   </head>
   <body>
+    <!-- Page header -->
     <header>
       <nav>
-        <a href="/"><img src="./images/logo.svg" alt="" />photo</a>
+        <a href="/"><img src="./images/logo.svg" alt="logo" />photo</a>
 
         <ul>
           <li><a href="">Features</a></li>
@@ -25,76 +26,122 @@
       </nav>
     </header>
 
-    <div>
+    <main>
+      <!-- Hero section -->
       <section>
         <h1>The largest community of photo enthusiasts</h1>
         <a href="">Join today</a>
       </section>
-    </div>
 
-    <section>
-      <h2>Snap photos and share like <br />never before</h2>
-      <ul>
-        <li>
-          <h3>Sed ut perspiciatis</h3>
-          <p>
-            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-            consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-            quisquam est.
-          </p>
-          <a href="">Learn more</a>
-        </li>
-        <li>
-          <h3>Lorem ipsum dolor</h3>
-          <p>
-            Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.
-          </p>
-          <a href="">Learn more</a>
-        </li>
-        <li>
-          <h3>Nemo enim ipsam</h3>
-          <p>
-            Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-            quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
-            quia non numquam.
-          </p>
-          <a href="">Learn more</a>
-        </li>
-        <li>
-          <h3>Tempor incididunt</h3>
-          <p>
-            Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-            quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi
-            tempora.
-          </p>
-          <a href="">Learn more</a>
-        </li>
-      </ul>
-    </section>
+      <!-- Features section -->
+      <section>
+        <h2>Snap photos and share like <br />never before</h2>
+        <ul>
+          <li>
+            <h3>Sed ut perspiciatis</h3>
+            <p>
+              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+              consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+              quisquam est.
+            </p>
+            <a href="">Learn more</a>
+          </li>
+          <li>
+            <h3>Lorem ipsum dolor</h3>
+            <p>
+              Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+              laboris nisi.
+            </p>
+            <a href="">Learn more</a>
+          </li>
+          <li>
+            <h3>Nemo enim ipsam</h3>
+            <p>
+              Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+              quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
+              quia non numquam.
+            </p>
+            <a href="">Learn more</a>
+          </li>
+          <li>
+            <h3>Tempor incididunt</h3>
+            <p>
+              Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
+              quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi
+              tempora.
+            </p>
+            <a href="">Learn more</a>
+          </li>
+        </ul>
+      </section>
 
-    <section>
-      <h2>Examples of works</h2>
-      <ul>
-        <li>
-          <img src="./images/placeholder.png" alt="" width="750" />
-          <h3>Sed ut perspiciatis unde omnis</h3>
-          <p>
-            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-            consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-            quisquam est, qui dolorem.
-          </p>
-        </li>
-        <li>
-          <img src="./images/placeholder.png" alt="" width="750" />
-          <h3>Sed ut perspiciatis unde omnis</h3>
-          <p>
-            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-            consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-            quisquam est, qui dolorem.
-          </p>
-        </li>
-      </ul>
-    </section>
+      <!-- Examples section -->
+      <section>
+        <h2>Examples of works</h2>
+        <ul>
+          <li>
+            <img src="./images/placeholder.png" alt="Example of work" width="750" />
+            <h3>Sed ut perspiciatis unde omnis</h3>
+            <p>
+              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+              consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+              quisquam est, qui dolorem.
+            </p>
+          </li>
+          <li>
+            <img src="./images/placeholder.png" alt="Example of work" width="750" />
+            <h3>Sed ut perspiciatis unde omnis</h3>
+            <p>
+              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+              consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+              quisquam est, qui dolorem.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- Testimonial -->
+      <section>
+        <h2>You’re in good company</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore
+        </p>
+
+        <ul>
+          <li>
+            <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
+          </li>
+        </ul>
+      </section>
+
+      <!-- Signup -->
+      <section></section>
+    </main>
+
+    <!-- Footer -->
+    <footer>Footer</footer>
   </body>
 </html>
