--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <li><a href="">Features</a></li>
           <li><a href="">Pricing</a></li>
           <li><a href="">Community</a></li>
-          <li><a href="">Support</a></li>
+          <li><a href="./support.html">Support</a></li>
         </ul>
 
         <ul>
@@ -136,9 +136,6 @@
           </li>
         </ul>
       </section>
-
-      <!-- Signup -->
-      <section></section>
     </main>
 
     <!-- Footer -->
