--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MarkUp</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Page header -->
-    <header>
+    <header class="page-header">
       <nav>
-        <a href="/"><img src="./images/logo.svg" alt="logo" />photo</a>
+        <a href="./index.html" class="logo"><img src="./images/logo.svg" alt="logo" />photo</a>
 
-        <ul>
+        <ul class="site-nav">
           <li><a href="">Features</a></li>
           <li><a href="">Pricing</a></li>
           <li><a href="">Community</a></li>
@@ -20,7 +21,7 @@
           <li><a href="./wireframes.html">Wireframes</a></li>
         </ul>
 
-        <ul>
+        <ul class="auth-nav">
           <li><a href="">Log in</a></li>
           <li><a href="">Register</a></li>
         </ul>
