--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Photo app</title>
-    <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <!-- Page header -->
     <header>
       <nav>
-        <a href="./index.html" class="logo"
-          ><img src="./images/logo.svg" alt="logo" />photo</a
-        >
+        <a href="./index.html" class="logo"><img src="./images/logo.svg" alt="logo" />photo</a>
 
         <ul class="site-nav list">
           <li><a href="" class="link current">Features</a></li>
@@ -40,43 +37,41 @@
 
       <!-- Features section -->
       <section class="section">
-        <h2 class="section-title">
-          Snap photos and share like <br />never before
-        </h2>
+        <h2 class="section-title">Snap photos and share like <br />never before</h2>
         <ul class="feature-list">
           <li>
             <h3 class="title">Sed ut perspiciatis</h3>
             <p>
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-              aut fugit, sed quia consequuntur magni dolores eos qui ratione
-              voluptatem sequi nesciunt. Neque porro quisquam est.
+              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+              consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+              quisquam est.
             </p>
             <a href="" class="button secondary">Learn more</a>
           </li>
           <li>
             <h3 class="title">Lorem ipsum dolor</h3>
             <p>
-              Amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi.
+              Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+              laboris nisi.
             </p>
             <a href="" class="button secondary">Learn more</a>
           </li>
           <li>
             <h3 class="title">Nemo enim ipsam</h3>
             <p>
-              Consequuntur magni dolores eos qui ratione voluptatem sequi
-              nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
-              sit amet, consectetur, adipisci velit, sed quia non numquam.
+              Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+              quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
+              quia non numquam.
             </p>
             <a href="" class="button secondary">Learn more</a>
           </li>
           <li>
             <h3 class="title">Tempor incididunt</h3>
             <p>
-              Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam
-              est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-              velit, sed quia non numquam eius modi tempora.
+              Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
+              quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi
+              tempora.
             </p>
             <a href="" class="button secondary">Learn more</a>
           </li>
@@ -88,29 +83,21 @@
         <h2 class="section-title">Examples of works</h2>
         <ul class="work-list">
           <li>
-            <img
-              src="./images/placeholder.png"
-              alt="Example of work"
-              width="750"
-            />
+            <img src="./images/placeholder.png" alt="Example of work" width="750" />
             <h3 class="title">Sed ut perspiciatis unde omnis</h3>
             <p>
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-              aut fugit, sed quia consequuntur magni dolores eos qui ratione
-              voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.
+              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+              consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+              quisquam est, qui dolorem.
             </p>
           </li>
           <li>
-            <img
-              src="./images/placeholder.png"
-              alt="Example of work"
-              width="750"
-            />
+            <img src="./images/placeholder.png" alt="Example of work" width="750" />
             <h3 class="title">Sed ut perspiciatis unde omnis</h3>
             <p>
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-              aut fugit, sed quia consequuntur magni dolores eos qui ratione
-              voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.
+              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+              consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+              quisquam est, qui dolorem.
             </p>
           </li>
         </ul>
@@ -120,8 +107,8 @@
       <section class="section">
         <h2>You’re in good company</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore
         </p>
 
         <ul>
@@ -156,8 +143,8 @@
       <section>
         <h2>SignUp</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore
         </p>
 
         <!-- I'm not a jin 🐷 -->
