--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Photo app</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet" />
-
-    <link
       href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
@@ -115,7 +109,7 @@
 
       <!-- Testimonial section -->
       <section class="section">
-        <h2>You’re in good company</h2>
+        <h2 class="section-title">You’re in good company</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           ut labore
@@ -151,7 +145,7 @@
 
       <!-- SignUp section -->
       <section>
-        <h2>SignUp</h2>
+        <h2 class="section-title">SignUp</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           ut labore
