--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <!-- Features section -->
       <section class="section">
         <h2 class="section-title">Snap photos and share like <br />never before</h2>
-        <ul class="feature-list">
+        <ul class="feature-list list">
           <li>
             <h3 class="title">Sed ut perspiciatis</h3>
             <p>
@@ -85,7 +85,7 @@
       <!-- Exsamples section -->
       <section class="section">
         <h2 class="section-title">Examples of works</h2>
-        <ul class="work-list">
+        <ul class="work-list list">
           <li>
             <img src="./images/placeholder.png" alt="Example of work" width="750" />
             <h3 class="title">Sed ut perspiciatis unde omnis</h3>
@@ -110,12 +110,12 @@
       <!-- Testimonial section -->
       <section class="section">
         <h2 class="section-title">You’re in good company</h2>
-        <p>
+        <p class="section-description">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           ut labore
         </p>
 
-        <ul>
+        <ul class="list">
           <li>
             <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
           </li>
@@ -146,7 +146,7 @@
       <!-- SignUp section -->
       <section>
         <h2 class="section-title">SignUp</h2>
-        <p>
+        <p class="section-description">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           ut labore
         </p>
@@ -161,21 +161,21 @@
 
     <!-- Page Footer -->
     <footer>
-      <ul>
+      <ul class="list">
         <li><a href="">Mobile app</a></li>
         <li><a href="">Community</a></li>
         <li><a href="">Company</a></li>
       </ul>
 
-      <a href="/"><img src="./images/logo.svg" alt="logo" />photo</a>
+      <a href="./index.html" class="logo"><img src="./images/logo.svg" alt="logo" />photo</a>
 
-      <ul>
+      <ul class="list">
         <li><a href="">Help desk</a></li>
         <li><a href="">Blog</a></li>
         <li><a href="">Resources</a></li>
       </ul>
 
-      <ul>
+      <ul class="list">
         <li><a href="" aria-label="Facebook link"></a></li>
         <li><a href="" aria-label="Twitter link"></a></li>
         <li><a href="" aria-label="Instagram link"></a></li>
