--- a/compendium.html
+++ b/compendium.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Review of the abstract</title>
     <link rel="stylesheet" href="./css/compendium.css" />
   </head>
-  <body></body>
+  <body>
+    <a href="./index.html">Back to main</a>
+
+    <a href="" class="btn">Touch me</a>
+  </body>
 </html>
