--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
@@ -18,6 +22,7 @@
         <a href="./index.html" class="logo"><img src="./images/logo.svg" alt="logo" />photo</a>
 
         <ul class="site-nav list">
+          <li><a href="./compendium.html" class="link">Review of the abstract</a></li>
           <li><a href="" class="link current">Features</a></li>
           <li><a href="" class="link">Pricing</a></li>
           <li><a href="./community.html" class="link">Community</a></li>
