--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </head>
   <body>
     <!-- Page header -->
-    <header>
-      <nav>
+    <header class="page-header">
+      <nav class="container">
         <a href="./index.html" class="logo"><img src="./images/logo.svg" alt="logo" />photo</a>
 
         <ul class="site-nav list">
@@ -46,148 +46,173 @@
 
       <!-- Features section -->
       <section class="section">
-        <h2 class="section-title">Snap photos and share like <br />never before</h2>
-        <ul class="feature-list list">
-          <li>
-            <h3 class="title">Sed ut perspiciatis</h3>
-            <p>
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-              consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-              quisquam est.
-            </p>
-            <a href="" class="button secondary">Learn more</a>
-          </li>
-          <li>
-            <h3 class="title">Lorem ipsum dolor</h3>
-            <p>
-              Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-              laboris nisi.
-            </p>
-            <a href="" class="button secondary">Learn more</a>
-          </li>
-          <li>
-            <h3 class="title">Nemo enim ipsam</h3>
-            <p>
-              Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-              quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
-              quia non numquam.
-            </p>
-            <a href="" class="button secondary">Learn more</a>
-          </li>
-          <li>
-            <h3 class="title">Tempor incididunt</h3>
-            <p>
-              Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum
-              quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi
-              tempora.
-            </p>
-            <a href="" class="button secondary">Learn more</a>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Snap photos and share like <br />never before</h2>
+          <ul class="feature-list list">
+            <li>
+              <h3 class="title">Sed ut perspiciatis</h3>
+              <p>
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+                consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+                quisquam est.
+              </p>
+              <a href="" class="button secondary">Learn more</a>
+            </li>
+            <li>
+              <h3 class="title">Lorem ipsum dolor</h3>
+              <p>
+                Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                laboris nisi.
+              </p>
+              <a href="" class="button secondary">Learn more</a>
+            </li>
+            <li>
+              <h3 class="title">Nemo enim ipsam</h3>
+              <p>
+                Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+                quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
+                sed quia non numquam.
+              </p>
+              <a href="" class="button secondary">Learn more</a>
+            </li>
+            <li>
+              <h3 class="title">Tempor incididunt</h3>
+              <p>
+                Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem
+                ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius
+                modi tempora.
+              </p>
+              <a href="" class="button secondary">Learn more</a>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <!-- Exsamples section -->
-      <section class="section">
-        <h2 class="section-title">Examples of works</h2>
-        <ul class="work-list list">
-          <li>
-            <img src="./images/placeholder.png" alt="Example of work" width="750" />
-            <h3 class="title">Sed ut perspiciatis unde omnis</h3>
-            <p>
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-              consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-              quisquam est, qui dolorem.
-            </p>
-          </li>
-          <li>
-            <img src="./images/placeholder.png" alt="Example of work" width="750" />
-            <h3 class="title">Sed ut perspiciatis unde omnis</h3>
-            <p>
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-              consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-              quisquam est, qui dolorem.
-            </p>
-          </li>
-        </ul>
+      <!-- Works section -->
+      <section class="section no-padding">
+        <div class="container">
+          <h2 class="section-title">Examples of works</h2>
+          <ul class="work-list list">
+            <li class="item">
+              <img src="./images/placeholder.png" alt="Example of work" width="750" />
+              <h3 class="title">Sed ut perspiciatis unde omnis</h3>
+              <p>
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+                consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+                quisquam est, qui dolorem.
+              </p>
+            </li>
+            <li class="item">
+              <img src="./images/placeholder.png" alt="Example of work" width="750" />
+              <h3 class="title">Sed ut perspiciatis unde omnis</h3>
+              <p>
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+                consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
+                quisquam est, qui dolorem.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <!-- Testimonial section -->
+      <!-- Clients section -->
       <section class="section">
-        <h2 class="section-title">You’re in good company</h2>
-        <p class="section-description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-          ut labore
-        </p>
+        <div class="container">
+          <h2 class="section-title centered">You’re in good company</h2>
+          <p class="section-description centered">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore
+          </p>
 
-        <ul class="list">
-          <li>
-            <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
-          </li>
-          <li>
-            <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
-          </li>
-          <li>
-            <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
-          </li>
-          <li>
-            <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
-          </li>
-          <li>
-            <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
-          </li>
-          <li>
-            <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
-          </li>
-          <li>
-            <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
-          </li>
-          <li>
-            <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
-          </li>
-        </ul>
+          <ul class="list">
+            <li>
+              <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
+            </li>
+            <li>
+              <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
+            </li>
+            <li>
+              <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
+            </li>
+            <li>
+              <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
+            </li>
+            <li>
+              <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
+            </li>
+            <li>
+              <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
+            </li>
+            <li>
+              <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
+            </li>
+            <li>
+              <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- SignUp section -->
-      <section>
-        <h2 class="section-title">SignUp</h2>
-        <p class="section-description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-          ut labore
-        </p>
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">SignUp</h2>
+          <p class="section-description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore
+          </p>
 
-        <!-- I'm not a jin 🐷 -->
-        <div>
-          <a href="" class="button primary">Join Today</a>
-          <a href="" class="button secondary">Contact us</a>
+          <div>
+            <a href="" class="button primary">Join Today</a>
+            <a href="" class="button secondary">Contact us</a>
+          </div>
         </div>
       </section>
     </main>
 
     <!-- Page Footer -->
     <footer>
-      <ul class="list">
-        <li><a href="">Mobile app</a></li>
-        <li><a href="">Community</a></li>
-        <li><a href="">Company</a></li>
-      </ul>
-
       <a href="./index.html" class="logo"><img src="./images/logo.svg" alt="logo" />photo</a>
 
+      <h3>Mobile app</h3>
       <ul class="list">
-        <li><a href="">Help desk</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Resources</a></li>
+        <li>Features</li>
+        <li>Live share</li>
+        <li>Video record</li>
       </ul>
 
+      <h3>Community</h3>
       <ul class="list">
-        <li><a href="" aria-label="Facebook link"></a></li>
-        <li><a href="" aria-label="Twitter link"></a></li>
-        <li><a href="" aria-label="Instagram link"></a></li>
-        <li><a href="" aria-label="LinkedIn link"></a></li>
+        <li>Featured artists</li>
+        <li>The Portal</li>
+        <li>Live events</li>
       </ul>
 
-      <p>&copy; Photo, Inc. 2019. We love our users!</p>
+      <h3>Company</h3>
+      <ul class="list">
+        <li>About us</li>
+        <li>Contact us</li>
+        <li>History</li>
+      </ul>
+
+      <ul class="auth-nav list">
+        <li><a href="" class="button primary">Register</a></li>
+        <li><a href="" class="button secondary">Log in</a></li>
+      </ul>
+
+      <p class="copyright">&copy; Photo, Inc. 2019. We love our users!</p>
+
+      <div class="social">
+        <p class="label">Follow span:</p>
+
+        <ul class="list">
+          <li><a href="" aria-label="Facebook link"> </a></li>
+          <li><a href="" aria-label="Twitter link"></a></li>
+          <li><a href="" aria-label="Instagram link"></a></li>
+          <li><a href="" aria-label="LinkedIn link"></a></li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
