--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
           facilis officiis deserunt ullam dolores vitae sunt aut saepe.
         </div>
         <div class="flex-element">
-          Dolorem ullam maxime tempora culpa accusamus eos a recusandae suscipit repudiandae. Autem
-          cupiditate commodi excepturi quaerat, exercitationem quo possimus eum, quam id quibusdam
-          modi earum sunt ea quisquam nemo eligendi.
+          Fugiat magni dolor error asperiores, veniam eligendi temporibus perspiciatis, numquam
+          consectetur illum, dolorum in. Obcaecati similique cumque, veritatis, fugit quidem quis
+          facilis officiis deserunt ullam dolores vitae sunt aut saepe.
         </div>
       </div>
     </div>
