--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <div class="test-container">
+    <!-- <div class="test-container">
       <div class="flex-container">
         <div class="flex-element">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae est quia facere deserunt
@@ -49,7 +49,7 @@
           facilis officiis deserunt ullam dolores vitae sunt aut saepe.
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Page header -->
     <header class="page-header">
@@ -129,21 +129,25 @@
           <ul class="work-list list">
             <li class="item">
               <img src="./images/placeholder.png" alt="Example of work" width="750" />
-              <h3 class="title">Sed ut perspiciatis unde omnis</h3>
-              <p>
-                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-                consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-                quisquam est, qui dolorem.
-              </p>
+              <div class="content">
+                <h3 class="title">Sed ut perspiciatis unde omnis</h3>
+                <p>
+                  Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed
+                  quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque
+                  porro quisquam est, qui dolorem.
+                </p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/placeholder.png" alt="Example of work" width="750" />
-              <h3 class="title">Sed ut perspiciatis unde omnis</h3>
-              <p>
-                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-                consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-                quisquam est, qui dolorem.
-              </p>
+              <div class="content">
+                <h3 class="title">Sed ut perspiciatis unde omnis</h3>
+                <p>
+                  Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed
+                  quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque
+                  porro quisquam est, qui dolorem.
+                </p>
+              </div>
             </li>
           </ul>
         </div>
@@ -158,29 +162,29 @@
             incididunt ut labore
           </p>
 
-          <ul class="list">
-            <li>
+          <ul class="client-list list">
+            <li class="item">
               <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
             </li>
-            <li>
+            <li class="item">
               <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
             </li>
-            <li>
+            <li class="item">
               <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
             </li>
-            <li>
+            <li class="item">
               <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
             </li>
-            <li>
+            <li class="item">
               <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
             </li>
-            <li>
+            <li class="item">
               <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
             </li>
-            <li>
+            <li class="item">
               <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
             </li>
-            <li>
+            <li class="item">
               <a href=""><img src="./images/icon.svg" alt="logo of company" /></a>
             </li>
           </ul>
@@ -191,14 +195,16 @@
       <section class="section">
         <div class="container">
           <h2 class="section-title">SignUp</h2>
-          <p class="section-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore
-          </p>
+          <div class="reg">
+            <p class="section-description no-margin">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore
+            </p>
 
-          <div>
-            <a href="" class="button primary">Join Today</a>
-            <a href="" class="button secondary">Contact us</a>
+            <div class="reg-list">
+              <a href="" class="button primary">Join Today</a>
+              <a href="" class="button secondary">Contact us</a>
+            </div>
           </div>
         </div>
       </section>
