--- a/index.html
+++ b/index.html
@@ -194,16 +194,18 @@
       <!-- SignUp section -->
       <section class="section">
         <div class="container">
-          <h2 class="section-title">SignUp</h2>
-          <div class="reg">
-            <p class="section-description no-margin">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore
-            </p>
+          <div class="bg-color">
+            <h2 class="section-title">SignUp</h2>
+            <div class="reg">
+              <p class="section-description no-margin">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore
+              </p>
 
-            <div class="reg-list">
-              <a href="" class="button primary">Join Today</a>
-              <a href="" class="button secondary">Contact us</a>
+              <div class="reg-list">
+                <a href="" class="button primary">Join Today</a>
+                <a href="" class="button secondary">Contact us</a>
+              </div>
             </div>
           </div>
         </div>
@@ -211,46 +213,74 @@
     </main>
 
     <!-- Page Footer -->
-    <footer>
-      <a href="./index.html" class="logo"><img src="./images/logo.svg" alt="logo" />photo</a>
+    <footer class="page-footer container">
+      <div class="footer-main-nav">
+        <a href="./index.html" class="logo"><img src="./images/logo.svg" alt="logo" />photo</a>
 
-      <h3>Mobile app</h3>
-      <ul class="list">
-        <li>Features</li>
-        <li>Live share</li>
-        <li>Video record</li>
-      </ul>
+        <div class="footer-site-nav">
+          <div class="item">
+            <h3 class="subtitle">Mobile app</h3>
+            <ul class="list">
+              <li>Features</li>
+              <li>Live share</li>
+              <li>Video record</li>
+            </ul>
+          </div>
 
-      <h3>Community</h3>
-      <ul class="list">
-        <li>Featured artists</li>
-        <li>The Portal</li>
-        <li>Live events</li>
-      </ul>
+          <div class="item">
+            <h3 class="subtitle">Community</h3>
+            <ul class="list">
+              <li>Featured artists</li>
+              <li>The Portal</li>
+              <li>Live events</li>
+            </ul>
+          </div>
 
-      <h3>Company</h3>
-      <ul class="list">
-        <li>About us</li>
-        <li>Contact us</li>
-        <li>History</li>
-      </ul>
+          <div class="item">
+            <h3 class="subtitle">Company</h3>
+            <ul class="list">
+              <li>About us</li>
+              <li>Contact us</li>
+              <li>History</li>
+            </ul>
+          </div>
 
-      <ul class="auth-nav list">
-        <li><a href="" class="button primary">Register</a></li>
-        <li><a href="" class="button secondary">Log in</a></li>
-      </ul>
+          <ul class="auth-nav list">
+            <li><a href="" class="button primary margin-bottom">Register</a></li>
+            <li><a href="" class="button secondary">Log in</a></li>
+          </ul>
+        </div>
+      </div>
 
-      <p class="copyright">&copy; Photo, Inc. 2019. We love our users!</p>
+      <div class="social-nav">
+        <p class="copyright">&copy; Photo, Inc. 2019. We love our users!</p>
 
-      <div class="social">
-        <p class="label">Follow span:</p>
+        <div class="social">
+          <p class="label">Follow span:</p>
 
-        <ul class="list">
-          <li><a href="" aria-label="Facebook link"> </a></li>
-          <li><a href="" aria-label="Twitter link"></a></li>
-          <li><a href="" aria-label="Instagram link"></a></li>
-          <li><a href="" aria-label="LinkedIn link"></a></li>
-        </ul>
+          <ul class="social-list list">
+            <li class="item">
+              <a class="link" href="" aria-label="Facebook link"
+                ><img src="./images/social.svg" alt="" />
+              </a>
+            </li>
+            <li class="item">
+              <a class="link" href="" aria-label="Twitter link"
+                ><img src="./images/social.svg" alt=""
+              /></a>
+            </li>
+            <li class="item">
+              <a class="link" href="" aria-label="Instagram link"
+                ><img src="./images/social.svg" alt=""
+              /></a>
+            </li>
+            <li class="item">
+              <a class="link" href="" aria-label="LinkedIn link"
+                ><img src="./images/social.svg" alt=""
+              /></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
