--- a/01-external.html
+++ b/01-external.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>External SVG</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/01-external.css" />
   </head>
-  <body></body>
+  <body>
+    <a href="./index.html">Back to main</a>
+
+    <!-- img ❌ -->
+    <img src="./images/facebook.svg" alt="" width="100" />
+
+    <!-- background ✅ -->
+    <div class="icon"></div>
+  </body>
 </html>
