--- a/03-sprite.html
+++ b/03-sprite.html
@@ -13,5 +13,25 @@
   </head>
   <body>
     <a href="./index.html">Back to main</a>
+
+    <br />
+
+    <ul class="actions">
+      <li>
+        <button class="button">
+          <svg class="button-icon">
+            <use href="./images/sprite.svg#edit"></use>
+          </svg>
+        </button>
+      </li>
+      <li>
+        <button class="button">
+          <svg class="button-icon">
+            <use href="./images/sprite.svg#star"></use>
+          </svg>
+        </button>
+      </li>
+      <li></li>
+    </ul>
   </body>
 </html>
