--- a/03-underline.html
+++ b/03-underline.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="./css/03-underline.css" />
   </head>
   <body>
-    <a href="./index.html">Back to main</a>
+    <a href="./index.html">Back to main</a><br />
   </body>
 </html>
