--- a/04-card-overlay.html
+++ b/04-card-overlay.html
@@ -15,18 +15,20 @@
       <div class="product-thumb">
         <img src="./images/apples.jpg" alt="Apples" />
 
-        <div class="product-actions">
-          <button aria-label="To favorites" class="item">
-            <svg class="icon"><use href="./images/sprite.svg#star"></use></svg>
-          </button>
+        <div class="product-overlay">
+          <div class="product-actions">
+            <button aria-label="To favorites" class="item">
+              <svg class="icon"><use href="./images/sprite.svg#star"></use></svg>
+            </button>
 
-          <button aria-label="Write a review" class="item">
-            <svg class="icon"><use href="./images/sprite.svg#edit"></use></svg>
-          </button>
+            <button aria-label="Write a review" class="item">
+              <svg class="icon"><use href="./images/sprite.svg#edit"></use></svg>
+            </button>
 
-          <button aria-label="To bookmarks" class="item">
-            <svg class="icon"><use href="./images/sprite.svg#home"></use></svg>
-          </button>
+            <button aria-label="To bookmarks" class="item">
+              <svg class="icon"><use href="./images/sprite.svg#home"></use></svg>
+            </button>
+          </div>
         </div>
       </div>
 
