--- a/06-perspective.html
+++ b/06-perspective.html
@@ -9,6 +9,18 @@
     <link rel="stylesheet" href="./css/06-perspective.css" />
   </head>
   <body>
-    <a href="./index.html">Back to main</a>
+    <a href="./index.html">Back to main</a><br />
+
+    <div class="scene">
+      <div class="box"></div>
+    </div>
+
+    <div class="wrapper scene--card">
+      <div class="card">
+        <div class="card__face card__face--front">front</div>
+        <div class="card__face card__face--back">back</div>
+      </div>
+    </div>
+    <p>Click card to flip.</p>
   </body>
 </html>
