--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   </head>
   <body>
     <ul>
-      <li><a href="">Cross-browser label design</a></li>
-      <li><a href="">Modern label design</a></li>
-      <li><a href="">Input nested in the label, get rid of id</a></li>
-      <li><a href="">Custom checkboxes</a></li>
+      <li><a href="./01-crossbrowser.html">Cross-browser label design</a></li>
+      <li><a href="./02-modern-styles.html">Modern label design</a></li>
+      <li><a href="./03-nested.html">Input nested in the label, get rid of id</a></li>
+      <li><a href="./04-custom.html">Custom checkboxes</a></li>
     </ul>
   </body>
 </html>
