--- a/01-crossbrowser.html
+++ b/01-crossbrowser.html
@@ -17,5 +17,21 @@
   </head>
   <body>
     <a href="./index.html">Back to main</a>
+
+    <form class="form" autocomplete="off">
+      <div class="form-field">
+        <input type="text" class="form-input" name="name" id="name" placeholder=" " />
+        <label for="name" class="form-label">Name</label>
+        <!-- <span class="icon"></span> -->
+      </div>
+
+      <div class="form-field">
+        <input type="email" class="form-input" name="mail" id="mail" placeholder=" " />
+        <label for="mail" class="form-label">Email</label>
+        <!-- <span class="icon"></span> -->
+      </div>
+
+      <button type="submit">Submit</button>
+    </form>
   </body>
 </html>
