--- a/04-custom.html
+++ b/04-custom.html
@@ -17,5 +17,33 @@
   </head>
   <body>
     <a href="./index.html">Back to main</a>
+
+    <form class="form">
+      <ul>
+        <li>
+          <label class="field">
+            <input class="checkbox" type="checkbox" name="topic" value="html" />
+            <span class="icon"></span>
+            <span class="label">HTML</span>
+          </label>
+        </li>
+        <li>
+          <label class="field">
+            <input class="checkbox" type="checkbox" name="topic" value="css" />
+            <span class="icon"></span>
+            <span class="label">CSS</span>
+          </label>
+        </li>
+        <li>
+          <label class="field">
+            <input class="checkbox" type="checkbox" name="topic" value="js" />
+            <span class="icon"></span>
+            <span class="label">JavaScript</span>
+          </label>
+        </li>
+      </ul>
+
+      <button type="submit">Submit</button>
+    </form>
   </body>
 </html>
