--- a/03-nested.html
+++ b/03-nested.html
@@ -17,5 +17,21 @@
   </head>
   <body>
     <a href="./index.html">Back to main</a>
+
+    <form class="form" autocomplete="off">
+      <label class="form-field">
+        <input type="text" class="form-input" name="name" placeholder=" " />
+        <span class="form-label">Name</span>
+        <span class="icon"></span>
+      </label>
+
+      <label class="form-field">
+        <input type="email" class="form-input" name="mail" placeholder=" " />
+        <span class="form-label">Email</span>
+        <span class="icon"></span>
+      </label>
+
+      <button type="submit">Submit</button>
+    </form>
   </body>
 </html>
