--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@
   <div class="page-header">
     <div class="container">
       <nav class="nav">
-        <a class="company-logo" href="">Logo</a>
+        <a class="company-logo" href="">Logo 😀</a>
+        <button type="button" class="menu-button" aria-expanded="false" aria-controls="menu-container" data-menu-button>
+          <svg width="40" height="40" aria-label="Mobile menu switch">
+            <use class="icon-cross" href="./img/sprite.svg#cross"></use>
+            <use class="icon-menu" href="./img/sprite.svg#menu"></use>
+          </svg>
+        </button>
+
+        <div class="menu-container" id="menu-container" data-menu>
+          Menu content
+        </div>
       </nav>
     </div>
   </div>
