--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
     </div>
   </div>
 
+  <!-- <div class="mobile-menu">
+    <div class="content"></div>
+  </div> -->
+
   <script src="./js/menu.js"></script>
   <script src="./js/modal.js"></script>
 </body>
