--- a/03-picture.html
+++ b/03-picture.html
@@ -2,13 +2,28 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>&lt;picture&gt; element</title>
+  <link rel="stylesheet" href="./css/common.css" />
 </head>
 
 <body>
+  <p><a href="./index.html">Back to main</a></p>
 
+  <picture>
+    <source srcset="
+          ./img/cat-320.webp 320w,
+          ./img/cat-640.webp 640w,
+          ./img/cat-960.webp 960w
+        " type="image/webp" />
+
+    <img srcset="
+          ./img/cat-320.jpg 320w,
+          ./img/cat-640.jpg 640w,
+          ./img/cat-960.jpg 960w
+        " src="./img/cat-320.jpg" alt="Cat" sizes="(min-width: 960px) 25vw, (min-width: 576px) 50vw,  100vw" />
+  </picture>
 </body>
 
 </html>
